# Bisp_1

./: LICENSE  README.md  pyproject.toml
src/: BISP_1.py  __init__.py  bisp1_logll.py
src/BISP_1/: Bisp.py  Decomp.py  Priors.py  Stars.py  __init__.py  bisp1_logll.py
src/pasiphae_bisp1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: Usage_Tutorial.html  Usage_Tutorial.ipynb  sample_1C.csv  sample_2C.csv
