# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pasiphae-bisp1"
version = "1.0.0"
description = "Bayesian Inference of Starlight Polarization in 1d"
readme = "README.md"
authors = [{ name = "Vincent Pelgrims", email = "pelgrims@physics.uoc.gr" }]
license = { file = "LICENSE" }
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python ::3",
        "Development Status :: 1 - Beta",
        "Intended Audience :: Science/Research",
        "Operating System :: OS Independent",
        "Topic :: Scientific/Engineering",
        "Topic :: Scientific/Engineering :: Astronomy"
]
keywords = ["scientific", "computing"]
dependencies = [
	"Astropy >= 4.3.1",
	"dynesty >= 1.2.3",
	"scipy >= 1.4.1",
	"matplotlib >= 3.5.3",
	"numpy >= 1.21.0",
	"corner >= 2.2.1"
]
requires-python = ">=3.7.6"

[project.urls]
Homepage = "https://github.com/vpelgrims/Bisp_1"
